<resources>
    <string name="app_name">Laborator</string>

    <string-array name="ProductName">
        <item>Product_1</item>
        <item>Product_2</item>
        <item>Product_3</item>
        <item>Product_4</item>
        <item>Product_5</item>
        <item>Product_6</item>
        <item>Product_7</item>
        <item>Product_8</item>
    </string-array>

    <string name="item1">Settings</string>
    <string name="item2">Informations</string>
    <string name="item3">More</string>
    <string name="subitem1">Rate App</string>
    <string name="subitem2">Exit App</string>
    <string name="itemSave">Save Preferences</string>
    <string name="itemSensors">Show Sensors</string>
    <string name="itemLocation">Show Current Location</string>
    <string name="itemCamera">Open Camera Module</string>

    <string name="sensorsTitle">Sensors</string>
    <string name="accelerometerTitle">Accelerometer</string>
    <string name="gyroscopeTitle">Gyroscope</string>
    <string name="acceNotSupported">Accelerometer not supported!</string>
    <string name="gyroNotSupported">Gyroscope not supported!</string>
    <string name="magneNotSupported">Magnetic Field sensor not supported!</string>
    <string name="notImplementedMessage">This feature was not yet implemented. We will try our best to do it.</string>

    <string name="cameraTitle">Camera Module</string>

    <string name="btnCapturePicture">Capture</string>
    <string name="rateButton">Rate</string>
</resources>
