<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item1"
        android:icon="@drawable/ic_icon"
        android:title="@string/item1"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/item2"
        android:title="@string/item2"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/item3"
        android:title="@string/item3"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/subitem1"
                android:title="@string/subitem1"/>
            <item
                android:id="@+id/subitem2"
                android:title="@string/subitem2"/>
        </menu>
    </item>
</menu>